--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,63 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 1000px;
+  margin: 2rem auto;
   padding: 2rem;
   text-align: center;
+  border: 2px solid gray;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+p {
+  margin: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-links {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.form-container form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.card {
-  padding: 2em;
+form label {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 200px 300px 50px auto;
+  justify-content: start;
 }
 
-.read-the-docs {
-  color: #888;
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-data-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.form-data-item {
+  padding: 2rem;
+  border: 2px solid gray;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-data-item__image-container img {
+  width: 500px;
+}
+
+.form-data-container.highlight .form-data-item:first-child {
+  border: 2px solid red;
 }
